maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:12: error: value -= is not a member of Int
      sommeAngle -= 1
                 ^Escaper:16: error: value += is not a member of Int
  	sommeAngle += 1
                   ^